@@ -1,3 +1,10 @@
+Tue Jun  2 16:00:12 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
+
+	* ext/socket/socket.c (udp_addrsetup): error check enhanced.
+
+	* ext/socket/socket.c (sock_s_getservbyaname): use strtoul(), if
+	  possible.
+
 Sat May 30 07:10:02 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
 
 	* re.c (reg_prepare_re): no more needless regular expression
